versioned_docs/version-1.0.1/GettingStarted/GettingStarted.mdx
---
sidebar_position: 1
slug: /
---

import MystrixVisualizer from "@site/src/components/MystrixVisualizer/MystrixVisualizer";

# Getting Started with Pixelboop

Pixelboop is an interactive musical grid **application** (available for iOS and coming soon to Android). It features a unique **44x24 pixel grid** that serves as your primary performance surface and sequencer.

## The Interface

While Pixelboop is a digital app, it is designed with a tactile, physical feel. The main interface is a dense grid of 1,056 interactive virtual LEDs. Each LED can represent a musical step or a visual effect.

### Interactive Grid Demonstration

Below is a live simulation of the Pixelboop grid. You can hover over the pixels to see them respond, simulating the physical touch interface.

export function HardwareDemo() {
    // Exact colors from PixelGridUIView.swift
    const trackColors = {
        melody: "#F7DC6F",    // Yellow
        chords: "#4ECDC4",    // Teal
        bass: "#45B7D1",      // Blue
        rhythm: "#FF6B6B"     // Red
    };
    
    const chromaticColors = [
        "#FF0000", "#FF4500", "#FF8C00", "#FFC700",  // C, C#, D, D#
        "#FFFF00", "#99CC33", "#00FF00", "#00FFAA",  // E, F, F#, G
        "#00FFFF", "#00AAFF", "#0055FF", "#8A2BE2"   // G#, A, A#, B
    ];

    const uiElements = [
        // Row 0 - Control Row
        { "name": "Play/Stop (3px)", "desc": "Cols 0-2: Tap to start/stop, hold 2s for WLED config", "elements": [
            { "pos": [0, 0], "size": [3, 1], "color": "#45FF45" }  // Green when stopped
        ]},
        { "name": "Undo", "desc": "Col 4: Undo last action", "elements": [{ "pos": [4, 0], "size": [1, 1], "color": "#878787" }] },
        { "name": "Redo", "desc": "Col 5: Redo action", "elements": [{ "pos": [5, 0], "size": [1, 1], "color": "#878787" }] },
        { "name": "Major Scale", "desc": "Col 7: Select major scale", "elements": [{ "pos": [7, 0], "size": [1, 1], "color": "#FFAA00" }] },
        { "name": "Minor Scale", "desc": "Col 8: Select minor scale", "elements": [{ "pos": [8, 0], "size": [1, 1], "color": "#00AAFF" }] },
        { "name": "Pentatonic", "desc": "Col 9: Select pentatonic scale", "elements": [{ "pos": [9, 0], "size": [1, 1], "color": "#AA00FF" }] },
        { "name": "Root Notes", "desc": "Cols 11-22: Select key (C through B)", "elements": chromaticColors.map((color, i) => ({
            "pos": [11 + i, 0], "size": [1, 1], "color": color
        }))},
        { "name": "Ghost Notes", "desc": "Col 24: Toggle ghost note display", "elements": [{ "pos": [24, 0], "size": [1, 1], "color": "#666666" }] },
        { "name": "BPM -", "desc": "Col 26: Decrease tempo", "elements": [{ "pos": [26, 0], "size": [1, 1], "color": "#454545" }] },
        { "name": "BPM Display", "desc": "Col 27: Shows current BPM, pulses with beat", "elements": [{ "pos": [27, 0], "size": [1, 1], "color": "#595959" }] },
        { "name": "BPM +", "desc": "Col 28: Increase tempo", "elements": [{ "pos": [28, 0], "size": [1, 1], "color": "#454545" }] },
        { "name": "Length -", "desc": "Col 30: Decrease pattern length", "elements": [{ "pos": [30, 0], "size": [1, 1], "color": "#454545" }] },
        { "name": "Length Display", "desc": "Col 31: Shows pattern length (8-32 steps)", "elements": [{ "pos": [31, 0], "size": [1, 1], "color": "#7F7F7F" }] },
        { "name": "Length +", "desc": "Col 32: Increase pattern length", "elements": [{ "pos": [32, 0], "size": [1, 1], "color": "#454545" }] },
        { "name": "Shake Indicator", "desc": "Cols 34-35: Shows shake gesture detection", "elements": [{ "pos": [34, 0], "size": [2, 1], "color": "#212121" }] },
        { "name": "USB MIDI", "desc": "Cols 36-37: USB MIDI connection indicator", "elements": [{ "pos": [36, 0], "size": [2, 1], "color": "#404040" }] },
        { "name": "Bluetooth MIDI", "desc": "Cols 38-39: Bluetooth MIDI connection indicator", "elements": [{ "pos": [38, 0], "size": [2, 1], "color": "#4080FF" }] },
        { "name": "Clear Pattern", "desc": "Cols 40-43: Clear all notes", "elements": [{ "pos": [40, 0], "size": [4, 1], "color": "#662121" }] },

        // Row 1 - Timeline/Beat Markers
        { "name": "Track Labels", "desc": "Cols 0-3: Track control area", "elements": [{ "pos": [0, 1], "size": [4, 1], "color": "#212121" }] },
        { "name": "Bar Markers", "desc": "Every 8 steps (beats 1, 9, 17, 25)", "elements": [
            { "pos": [4, 1], "size": [1, 1], "color": "#545454" },
            { "pos": [12, 1], "size": [1, 1], "color": "#545454" },
            { "pos": [20, 1], "size": [1, 1], "color": "#545454" },
            { "pos": [28, 1], "size": [1, 1], "color": "#545454" }
        ]},
        { "name": "Beat Markers", "desc": "Every 4 steps (beats 5, 13, 21, 29)", "elements": [
            { "pos": [8, 1], "size": [1, 1], "color": "#333333" },
            { "pos": [16, 1], "size": [1, 1], "color": "#333333" },
            { "pos": [24, 1], "size": [1, 1], "color": "#333333" },
            { "pos": [32, 1], "size": [1, 1], "color": "#333333" }
        ]},
        { "name": "Step Grid", "desc": "All other steps (dark gray)", "elements": [
            { "pos": [5, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [6, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [7, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [9, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [10, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [11, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [13, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [14, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [15, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [17, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [18, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [19, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [21, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [22, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [23, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [25, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [26, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [27, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [29, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [30, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [31, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [33, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [34, 1], "size": [1, 1], "color": "#1A1A1A" },
            { "pos": [35, 1], "size": [1, 1], "color": "#1A1A1A" }
        ]},
        
        // Melody Track (rows 2-7, 6 pitches)
        { "name": "Melody Mute", "desc": "Col 0: Tap to mute melody", "elements": [{ "pos": [0, 2], "size": [1, 6], "color": trackColors.melody }] },
        { "name": "Melody Solo", "desc": "Col 1: Tap to solo melody", "elements": [{ "pos": [1, 2], "size": [1, 6], "color": "#333333" }] },
        { "name": "Melody VU Meter", "desc": "Col 2: Audio level indicator", "elements": [{ "pos": [2, 2], "size": [1, 6], "color": "#0D0D0D" }] },
        { "name": "Melody Notes", "desc": "Col 3: Shows current scale notes", "elements": chromaticColors.slice(0, 6).map((color, i) => ({
            "pos": [3, 7 - i], "size": [1, 1], "color": color
        }))},
        { "name": "Melody Grid", "desc": "Cols 4-35: 32-step sequencer (draw notes here)", "elements": [{ "pos": [4, 2], "size": [32, 6], "color": "#1A1A0A" }] },
        { "name": "Melody Sections", "desc": "Cols 36-43: 8 song sections", "elements": [{ "pos": [36, 2], "size": [8, 6], "color": "#1F1F0A" }] },
        
        // Chords Track (rows 8-13, 6 pitches)
        { "name": "Chords Mute", "desc": "Col 0: Tap to mute chords", "elements": [{ "pos": [0, 8], "size": [1, 6], "color": trackColors.chords }] },
        { "name": "Chords Solo", "desc": "Col 1: Tap to solo chords", "elements": [{ "pos": [1, 8], "size": [1, 6], "color": "#333333" }] },
        { "name": "Chords VU Meter", "desc": "Col 2: Audio level indicator", "elements": [{ "pos": [2, 8], "size": [1, 6], "color": "#0D0D0D" }] },
        { "name": "Chords Notes", "desc": "Col 3: Shows current scale notes", "elements": chromaticColors.slice(0, 6).map((color, i) => ({
            "pos": [3, 13 - i], "size": [1, 1], "color": color
        }))},
        { "name": "Chords Grid", "desc": "Cols 4-35: 32-step sequencer", "elements": [{ "pos": [4, 8], "size": [32, 6], "color": "#0A1A1A" }] },
        { "name": "Chords Sections", "desc": "Cols 36-43: 8 song sections", "elements": [{ "pos": [36, 8], "size": [8, 6], "color": "#0A1F1F" }] },
        
        // Bass Track (rows 14-17, 4 pitches)
        { "name": "Bass Mute", "desc": "Col 0: Tap to mute bass", "elements": [{ "pos": [0, 14], "size": [1, 4], "color": trackColors.bass }] },
        { "name": "Bass Solo", "desc": "Col 1: Tap to solo bass", "elements": [{ "pos": [1, 14], "size": [1, 4], "color": "#333333" }] },
        { "name": "Bass VU Meter", "desc": "Col 2: Audio level indicator", "elements": [{ "pos": [2, 14], "size": [1, 4], "color": "#0D0D0D" }] },
        { "name": "Bass Notes", "desc": "Col 3: Shows current scale notes", "elements": chromaticColors.slice(0, 4).map((color, i) => ({
            "pos": [3, 17 - i], "size": [1, 1], "color": color
        }))},
        { "name": "Bass Grid", "desc": "Cols 4-35: 32-step sequencer", "elements": [{ "pos": [4, 14], "size": [32, 4], "color": "#0A0A1A" }] },
        { "name": "Bass Sections", "desc": "Cols 36-43: 8 song sections", "elements": [{ "pos": [36, 14], "size": [8, 4], "color": "#0A0A1F" }] },
        
        // Rhythm Track (rows 18-21, 4 drum sounds)
        { "name": "Rhythm Mute", "desc": "Col 0: Tap to mute drums", "elements": [{ "pos": [0, 18], "size": [1, 4], "color": trackColors.rhythm }] },
        { "name": "Rhythm Solo", "desc": "Col 1: Tap to solo drums", "elements": [{ "pos": [1, 18], "size": [1, 4], "color": "#333333" }] },
        { "name": "Rhythm VU Meter", "desc": "Col 2: Audio level indicator", "elements": [{ "pos": [2, 18], "size": [1, 4], "color": "#0D0D0D" }] },
        { "name": "Drum Banks", "desc": "Col 3: Tap to switch drum banks (4 kits × 4 sounds)", "elements": [
            { "pos": [3, 18], "size": [1, 1], "color": "#FF0000" },
            { "pos": [3, 19], "size": [1, 1], "color": "#FF8800" },
            { "pos": [3, 20], "size": [1, 1], "color": "#FFFF00" },
            { "pos": [3, 21], "size": [1, 1], "color": "#00FF00" }
        ]},
        { "name": "Rhythm Grid", "desc": "Cols 4-35: 32-step sequencer", "elements": [{ "pos": [4, 18], "size": [32, 4], "color": "#1A0A0A" }] },
        { "name": "Rhythm Sections", "desc": "Cols 36-43: 8 song sections", "elements": [{ "pos": [36, 18], "size": [8, 4], "color": "#1F0A0A" }] },
        
        // Row 22 - Unused (dark)
        { "name": "Unused", "desc": "Row 22: Reserved for future features", "elements": [{ "pos": [0, 22], "size": [44, 1], "color": "#0D0D0D" }] },
        
        // Row 23 - Bottom Control Row
        { "name": "WLED Rainbow", "desc": "Cols 0-3: External LED strip sync", "elements": [
            { "pos": [0, 23], "size": [1, 1], "color": "#FF0000" },
            { "pos": [1, 23], "size": [1, 1], "color": "#FF8800" },
            { "pos": [2, 23], "size": [1, 1], "color": "#00FF00" },
            { "pos": [3, 23], "size": [1, 1], "color": "#00FFAA" }
        ]},
        { "name": "Link Button", "desc": "Cols 5-7: Ableton Link timing sync", "elements": [{ "pos": [5, 23], "size": [3, 1], "color": "#5A5A5A" }] },
        { "name": "Mode Button", "desc": "Cols 8-9: Pattern/Song mode toggle", "elements": [{ "pos": [8, 23], "size": [2, 1], "color": "#4A4A4A" }] },
        { "name": "Sync Button", "desc": "Cols 10-12: Multi-device sync, middle pixel gold when host", "elements": [{ "pos": [10, 23], "size": [3, 1], "color": "#3A3A3A" }] },
        { "name": "Device Indicators", "desc": "Cols 13-20: Shows up to 8 connected devices with colors", "elements": [{ "pos": [13, 23], "size": [8, 1], "color": "#1A1A1A" }] }
    ];

    return <MystrixVisualizer
        uiName="Pixelboop 44×24 Grid"
        uiDescription="Exact 1:1 representation - hover over any pixel to explore"
        uiElements={uiElements}
    />
}

<HardwareDemo />

## Grid Zones

The 44x24 grid is divided into three vertical zones:
- **Labels (Cols 0-3):** Identify tracks and provide controls.
- **Steps (Cols 4-35):** The main 32-step sequencer area where you draw notes.
- **Sections (Cols 36-43):** Trigger different song sections (Intro, Verse, Chorus, etc.).

## Basic Concepts

- **Pixels as Steps**: Each vertical column in the "Steps" zone represents a 1/16th note (usually), while horizontal rows represent pitch or drums.
- **Multitouch**: Pixelboop supports complex multitouch gestures for drawing patterns and manipulating sounds.
- **Visual Feedback**: Every interaction is met with vibrant glowing feedback.
